notification overflow fix

--- a/style/screen.css
+++ b/style/screen.css
@@ -84,6 +84,7 @@ html {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 *,
